CIVET Release Notes
This document describes the high-level changes made to the civet software from
release to release.  It is cumulative, with the most recent changes listed
first.  The most up-to-date version is in the civet git repository
redmine:/var/git/civet.git

Version 1.8.5
-------------

Features
 - create wrapped version of parse_XML() to catch parse errors and exit
   automatically (enhances existing wrapper scripts). Old behavior can be
   found by calling _parse_XML()


Version 1.8.4
-------------
Bug Fixes
 - fix AttributeError when referencing undefined file within a tool XML
 - allow use of "PIPELINE_ROOT" within tool XML
 - raise a ParseError if a File ID is defined more than once


Version 1.8.3
-------------
Bug Fixes
 - fix bug introduced in 1.8.2 that prevented the epilogue from running
   correctly for the merged remove temp/consolidate logs step


Version 1.8.2
-------------
Bug Fixes
 - <string> tags can now be used in tool xml files
 - epilogue path is set correctly if log_dir and execution_log_dir differ

Features
 - wall_time_ranges_list_long_jobs.py utility now lets user specify the
   minimum walltime to use to classify a job as 'long running'
 - remove temp and consolidate log jobs merged


Version 1.8.1
-------------
Bug fixes
 - Don't strip off relative paths when applying in_dir
 - Allow 'pattern/replace' to be combined with 'append', 'datestamp_append',
   and 'datestamp_prepend' for the <file>, <dir>, and <string> tags.
 - civet_cancel -r was terminating if it found a complete pipeline rather than
   continuing on to process the next pipeline directory
 - <dir> files can now be declared temp in a tool XML

Features
 - New implicitly defined directory ID "PIPELINE_ROOT", contains the path to the
   directory containing the pipeline XML. Can be used to reference supporting
   files installed with the pipeline.
 - Added 'fast recursive' mode to civet_status, when exploring a directory tree