@@ -11,5 +11,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-class ParseError(Exception):
+
+class CivetException(Exception):
+    pass
+
+
+class ParseError(CivetException):
+    pass
+
+
+class MissingFile(CivetException):
     pass
